--- a/Phase4JoePizzaProject/appsettings.json
+++ b/Phase4JoePizzaProject/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "AppDbContext": "Server=tcp:phase4-apithalia.database.windows.net,1433;Database=PizzaSell;Initial Catalog=Phase4DB;Persist Security Info=False;User ID=apithalia;Password=*******;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "AppDbContext": "Server=tcp:phase4-apithalia.database.windows.net,1433;Database=PizzaSell;Initial Catalog=Phase4DB;Persist Security Info=False;User ID=*****;Password=*******;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
